--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   height: 100vh;
   width: 100vw;
   display: grid;
+  grid-template: 1fr 1fr 1fr 1fr ? 1fr 1fr 1fr;
   /* your properties here */
 }
 
