Automatically backed up by Learn

--- a/index.css
+++ b/index.css
@@ -13,6 +13,13 @@ body {
   /* your properties here */
 }
 
+.bigItem {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
 .grid-item {
   background-color: grey;
   border: 1px solid black;
