--- a/index.css
+++ b/index.css
@@ -14,10 +14,8 @@ body {
 }
 
 .bigItem {
-  grid-row-start: 2;
-  grid-row-end: 4;
-  grid-column-start: 2;
-  grid-column-end: 4;
+ grid-row: 2 / 4;
+ grid-column: 2 / 4;
 }
 
 .grid-item {
